tests/invalid/missing_esm_version.esm
{
  "metadata": {
    "name": "InvalidFile",
    "description": "Missing required ESM version field"
  },
  "models": {
    "TestModel": {
      "variables": {
        "x": { "type": "state", "units": "m", "default": 0.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": 1.0
        }
      ]
    }
  }
}